Add layout code for title, and navbar section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 
 <body>
   <div class="container">
-    <h1>The Great <spand id="colorDisplay">RBG</spand> Color Game</h1>
-    <div>
-      <span id="message">Say</span>
+    <div class="titleh1">
+      <h1>The Great</h1>
+      <p id="colorDisplay">RBG</p>
+      <p>Color Game</p>
+    </div>
+    <div class="navbar">
+      <button class="btn">Reset</button>
+      <span id="message">Click on my recret number!</span>
+      <button class="btn">Button</button>
     </div>
     <div class="container01">
       <div class="row">
