--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
       <p>Color Game</p>
     </div>
     <div class="navbar">
-      <button class="btn">Reset</button>
-      <span id="message">Click on my recret number!</span>
-      <button class="btn">Button</button>
+      <button class="btn-reset">New Color</button>
+      <span id="message">Click my secret color!</span>
+      <button class="btn-easy">Easy</button>
+      <button class="btn-hard">Hard</button>
     </div>
     <div class="container01">
-      <div class="row">
+      <div class="row-top3">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
       </div>
-      <div class="row">
+      <div class="row-bottom3">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
