--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
   <div class="container">
-    <div class="titleh1">
+    <div class="title-box">
       <h1>The Great</h1>
-      <p id="colorDisplay">RBG</p>
-      <p>Color Game</p>
+      <h2 id="colorDisplay">RBG</h2>
+      <h2>Color Game</h2>
     </div>
     <div class="navbar">
       <button class="btn-reset">New Color</button>
